# technovisor_test

./: README.md
technovisor_test_backend/: db.sqlite3  manage.py  pyproject.toml
technovisor_test_backend/ordering_dish/: admin.py  apps.py  models.py  serializers.py  views.py
technovisor_test_backend/ordering_dish/migrations/: 0001_initial.py  0002_alter_order_date.py  0003_order_dishes_delete_dishorder.py  0004_alter_dish_title.py
technovisor_test_backend/technovisor_test/: asgi.py  settings.py  urls.py  wsgi.py
technovisor_test_frontend/: README.md  otchet.py  output1.xlsx  package-lock.json  package.json  vite.config.js
technovisor_test_frontend/src/: App.vue  main.js
technovisor_test_frontend/src/components/: CreateModalWindow.vue  FormValid.vue  OrderDishesItem.vue  OrderDishesList.vue  ReportDeltatime.vue  ReportSumDishes.vue
technovisor_test_frontend/src/router/: index.js
technovisor_test_frontend/src/scss/: styles.scss
technovisor_test_frontend/src/stores/: orders.js
technovisor_test_frontend/src/views/: MainPageView.vue
